string/easy/n1/SolutionTest.java TwoPointerSolution